ecmascript/parser/tests/test262-error-references/fail/41895c8145489971.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/41895c8145489971.js:1:19
  |
1 | `hello ${10 `test`
  |                   ^

